k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: exposure-ingress
  namespace: application

spec:
  ingressClassName: nginx

  rules:
    - host: application.local

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: web-service
                port:
                  number: 5173


          - path: /api
            pathType: Prefix

            backend:
              service:
                name: api-service
                port:
                  number: 3000
